[package]
name = "dnsi"
version = "0.2.0"
edition = "2021"
rust-version = "1.78.0"
authors = ["NLnet Labs <dns-team@nlnetlabs.nl>"]
description = "A tool for investigating the DNS."
repository = "https://github.com/nlnetlabs/dnsi/"
categories = ["command-line-utilities"]
readme = "README.md"
keywords = ["DNS", "domain"]
license = "BSD-3-Clause"
exclude = [ ".github", ".gitignore" ]

[dependencies]
bytes    = "1"
clap     = { version = "4", features = ["derive", "unstable-doc"] }
chrono   = { version = "0.4.38", features = [ "alloc", "clock" ] }
domain   = { git = "https://github.com/NLnetLabs/domain.git", features = ["resolv", "unstable-client-transport"]}
tempfile = "3.1.0"
tokio    = { version = "1.33", features = ["rt-multi-thread"] }
tokio-rustls = { version = "0.26.0", default-features = false, features = [ "ring", "logging", "tls12" ] }
webpki-roots = "0.26.3"

[package.metadata.deb]
extended-description = """\
The dnsi utility is a command line tool for investigating various \
aspects of the DNS."""

[package.metadata.generate-rpm]
license = "BSD"
assets = [
  { source = "target/release/dnsi", dest = "/usr/bin/dnsi", mode = "755" },
]
